--- a/index.html
+++ b/index.html
@@ -7,34 +7,24 @@
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/466562a884.js" crossorigin="anonymous"></script>
     
     <title>NakOrder</title>
 </head>
 <body>    
     <div class="container">
         <div class="d-flex align-items-center my-4">
-            <h5 class="my-0 flex-fill text-center text-uppercase">Tables</h5>
+            <h5 class="my-0 flex-fill text-center">NakOrder</h5>
         </div>
 
         <div class="list-group shadow-sm">
-            <a href="table.html" class="list-group-item list-group-item-action">
-                Table 1
+            <a href="waiter.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                Waiter
+                <i class="fal fa-long-arrow-right"></i>
             </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                Table 2
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                Table 3
-            </a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success">
-                Table 4
-                <small class="float-right">Occupied</small>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                Table 5
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">
-                Table 6
+            <a href="kitchen.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                Kitchen
+                <i class="fal fa-long-arrow-right"></i>
             </a>
         </div>
     </div>
