--- a/kitchen.html
+++ b/kitchen.html
@@ -14,36 +14,21 @@
 <body>    
     <div class="container">
         <div class="d-flex align-items-center my-4">
-            <a href="table.html" class="text-dark px-3">
+            <a href="index.html" class="text-dark px-3">
                 <i class="far fa-arrow-left"></i>
             </a>
-            <h5 class="my-0 flex-fill text-center text-uppercase">Table 1</h5>
+            <h5 class="my-0 flex-fill text-center text-uppercase">Stations</h5>
         </div>
 
-        <p class="text-muted">Click on item to add to order.</p>
-        
         <div class="list-group shadow-sm">
-            <div class="list-group-item text-center text-uppercase text-muted">
-                Goreng-goreng
-            </div>
-            <a href="#" class="list-group-item d-flex justify-content-between list-group-item-action">
-                <strong>Nasi Ayam</strong>
-                <span>RM7.50</span>
+            <a href="food.html" class="list-group-item list-group-item-action">
+                Food Station
             </a>
-            <a href="#" class="list-group-item d-flex justify-content-between list-group-item-action">
-                <strong>Mee Goreng</strong>
-                <span>RM5.50</span>
+            <a href="food.html" class="list-group-item list-group-item-action">
+                Drinks Station
             </a>
-            <a href="#" class="list-group-item d-flex justify-content-between list-group-item-action">
-                <strong>Nasi Goreng Kampung</strong>
-                <span>RM8.00</span>
-            </a>
-            <div class="list-group-item text-center text-uppercase text-muted">
-                Minuman
-            </div>
-            <a href="#" class="list-group-item d-flex justify-content-between list-group-item-action">
-                <strong>Teh Ais</strong>
-                <span>RM4.00</span>
+            <a href="food.html" class="list-group-item list-group-item-action">
+                Sate Station
             </a>
         </div>
     </div>
