--- a/table.html
+++ b/table.html
@@ -21,11 +21,11 @@
             <h5 class="my-0 flex-fill text-center text-uppercase">Table 1</h5>
         </div>
 
-        <a href="add.html" class="btn btn-block btn-primary my-3 text-uppercase">Add to Order</a>
+        <a href="add.html" class="btn btn-block btn-secondary my-3 text-uppercase">Add to Order</a>
         
         <div class="list-group shadow-sm">
             <div class="list-group-item list-group-item-action">
-                <button type="button" class="close" aria-label="Close">
+                <button type="button" class="close text-muted" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="custom-control custom-checkbox">
@@ -38,7 +38,7 @@
                 <strong class="mt-2 d-block">RM7.50</strong>
             </div>
             <div class="list-group-item list-group-item-action">
-                <button type="button" class="close" aria-label="Close">
+                <button type="button" class="close text-muted" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="custom-control custom-checkbox">
@@ -50,7 +50,7 @@
                 <strong class="mt-2 d-block">RM5.50</strong>
             </div>
             <div class="list-group-item list-group-item-action">
-                <button type="button" class="close" aria-label="Close">
+                <button type="button" class="close text-muted" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="custom-control custom-checkbox">
@@ -63,7 +63,7 @@
                 <strong class="mt-2 d-block">RM16.00</strong>
             </div>
             <div class="list-group-item list-group-item-action">
-                <button type="button" class="close" aria-label="Close">
+                <button type="button" class="close text-muted" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <div class="custom-control custom-checkbox">
@@ -75,7 +75,7 @@
                 <p class="mb-0 mt-2 text-muted">Kurang gula.</p>
                 <strong class="mt-2 d-block">RM16.00</strong>
             </div>
-            <div class="list-group-item d-flex justify-content-between">
+            <div class="list-group-item d-flex justify-content-between list-group-item-dark">
                 <span>TOTAL</span>
                 <strong>RM29.00</strong>
             </div>
