Make pill white

--- a/food.html
+++ b/food.html
@@ -23,7 +23,7 @@
 
         <ul class="nav justify-content-center text-uppercase text-dark my-3">
             <li class="nav-item">
-                <a class="nav-link font-weight-bold text-dark border bg-light rounded" href="#">
+                <a class="nav-link font-weight-bold text-dark border bg-white rounded" href="#">
                     Orders
                     <span class="badge badge-secondary">2</span>
                 </a>
